Wrap/Unwrap fixes

--- a/src/components/AssetsList/AssetsList.scss
+++ b/src/components/AssetsList/AssetsList.scss
@@ -115,8 +115,6 @@
 		width: 38px;
 	}
 	.settings_btn_container {
-		display: unset;
-
 		position: unset;
 		right: unset;
 	}
